--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "nodemon": "^1.12.1",
     "sqlite3": "^3.1.13"
   }
 }
